--- a/landing/less/homepage.less
+++ b/landing/less/homepage.less
@@ -870,6 +870,11 @@ body {
       img:first-child {
         .blob-offset(-54.5rem, -12rem);
 
+        @media @tablet {
+          height: 7.5rem;
+          .blob-offset(-51rem, 2rem)
+        }
+
         @media @phone {
           height: 7rem;
           .blob-offset(-40.5rem, 5rem);
@@ -879,19 +884,29 @@ body {
         img:nth-child(2) {
           .blob-offset(-30rem, -13rem);
 
-            @media @phone {
-              height: 3rem;
-              .blob-offset(-7.5rem, -0.5rem);
-            }
+          @media @tablet {
+            height: 3.5rem;
+            .blob-offset(-7.5rem, 0.5rem);
+          }
+
+          @media @phone {
+            height: 3rem;
+            .blob-offset(-7.5rem, -0.5rem);
+          }
         }
 
         img:nth-child(3) {
           .blob-offset(-45rem, -12.5rem);
 
-            @media @phone {
-              height: 2rem;
-              .blob-offset(-12.5rem, 0rem);
-            }
+           @media @tablet {
+             height: 2.5rem;
+             .blob-offset(-12.5rem, 0rem);
+           }
+
+           @media @phone {
+             height: 2rem;
+             .blob-offset(-12.5rem, 0rem);
+           }
         }
     }
   }
